# rust-sgx-sample

./: .gitignore  todo.md
crypto/: Makefile
crypto/app/: Cargo.toml
crypto/app/src/: main.rs
crypto/enclave/: Cargo.toml  Enclave.edl
crypto/enclave/src/: lib.rs
hello-rust/: Makefile
hello-rust/app/: Cargo.toml
hello-rust/app/src/: main.rs
hello-rust/enclave/: Cargo.toml
hello-rust/enclave/src/: lib.rs
localattestation/: Makefile  make-app.mk  readme
localattestation/app/: Cargo.toml  build.rs
localattestation/app/src/: main.rs
localattestation/enclave1/src/: lib.rs
mutual-ra/: Makefile  client.txt  server.txt
mutual-ra/enclave/: Enclave.edl
sealeddata/: Makefile  make-app.mk  readme
sealeddata/APP/: app.c
sealeddata/app/: Cargo.toml
sealeddata/enclave/: Cargo.toml
secretsharing/enclave/: Cargo.toml  Enclave.edl
serialize/: Makefile
tr-mpc/tr-mpc-client/: measurement.txt
tr-mpc/tr-mpc-server2/: Makefile
ue-ra/: Readme.md  client.txt  server.txt
ue-ra/cert/: otherca.crt  otherca.key  otherclient.crt
ue-ra/ue-ra-server/: Makefile
wasmi-makeclean/: Makefile
wasmi-makeclean/app/: Cargo.toml
wasmi-ra/: log.md
wasmi-ra/cert/: ca.srl  otherca.srl  otherclient.crt  otherclient.csr  otherclient.key  otherclient.pkcs8
wasmi-ra/client/: Cargo.toml
wasmi-ra/data/: data1.txt  data10.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  data_process.py  draw.txt
wasmi-ra/data/wasmi_test/: Cargo.toml
wasmi-ra/data/wasmi_test/src/: main.rs
wasmi-ra/server/: Makefile  make-app.mk
wasmi-sample/: Makefile
wasmi-sgx/: Makefile
wasmi-sgx/app/: Cargo.toml
wasmi-sgx/enclave/: Cargo.toml  Enclave.edl
(+48 files in other folders)
