[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# [patch.'https://github.com/apache/teaclave-sgx-sdk.git']
# sgx_types = { path = "../../../sgx_types" }
# sgx_urts = { path = "../../../sgx_urts" }

