[package]
name = "wasmi_test"
version = "0.1.0"
authors = ["Schenk75 <sck_01@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.8.0"
wabt = "0.10.0"
serde = {version = "1.0"}
serde_json = {version = "1.0"}
serde_derive = {version = "1.0"}
nan-preserving-float = "0.1.0"
time = "0.1"